--- a/src/shared/components/Footer/Footer.module.css
+++ b/src/shared/components/Footer/Footer.module.css
@@ -1,5 +1,5 @@
 .footer {
-  background-color: var(--purple);
+  background-color: var(--teal);
   color: var(--white);
   padding: 2rem 0;
   margin-top: auto;
