--- a/src/pages/Home/components/FeatureSet/FeatureContainer/FeatureContainer.module.css
+++ b/src/pages/Home/components/FeatureSet/FeatureContainer/FeatureContainer.module.css
@@ -50,7 +50,7 @@
   content: '•';
   position: absolute;
   left: 0;
-  color: var(--purple);
+  color: var(--teal);
   font-size: 1.5rem;
   font-weight: 700;
   line-height: 1.2;
