--- a/src/pages/Login/Login.module.css
+++ b/src/pages/Login/Login.module.css
@@ -32,7 +32,7 @@
   font-family: 'Inter', sans-serif;
   font-size: 2.5rem;
   font-weight: 700;
-  color: var(--purple);
+  color: var(--teal);
   margin-bottom: 2rem;
 }
 
@@ -70,7 +70,7 @@
 .loadingMessage {
   font-family: 'Inter', sans-serif;
   font-size: 0.875rem;
-  color: var(--purple);
+  color: var(--teal);
   margin-top: 1rem;
 }
 
