--- a/src/pages/UserAccount/components/LanguageDropdown.module.css
+++ b/src/pages/UserAccount/components/LanguageDropdown.module.css
@@ -27,11 +27,11 @@
 }
 
 .dropdownButton:hover {
-  border-color: var(--purple);
+  border-color: var(--teal);
 }
 
 .dropdownButton.open {
-  border-color: var(--purple);
+  border-color: var(--teal);
 }
 
 .dropdownValue {
@@ -62,7 +62,6 @@
   border-radius: 10px;
   z-index: 999999;
   margin-top: 4px;
-  box-shadow: 0 4px 12px var(--shadow-black-15);
   max-height: 0;
   overflow: hidden;
   transition: max-height 0.2s ease-in-out;
@@ -86,7 +85,7 @@
   font-size: 14px;
   color: var(--gray-900);
   font-family: 'Inter', sans-serif;
-  border-bottom: 1px solid var(--very-light-purple);
+  border-bottom: 1px solid var(--teal-lighter);
 }
 
 .dropdownItem:hover {
